--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -12,10 +12,10 @@
 <body>
 
 
-<h2  style='text-align:center'>ÉFÉLÉ, réimprimeur la nuit</h2>
+<h2 style='text-align:center'>ÉFÉLÉ, réimprimeur la nuit</h2>
 
 <p>&nbsp;</p>
-<p  style='text-align:center'><a href="#presentation">Présentation</a> — <a href="#catalogue">Catalogue</a> — <a href="#fidelite">Fidélité</a> — <a href="#fichier_source">Fichier source</a> — <a href="#formats">Formats des tirages</a> — <a href="#bien_commun">Bien commun</a></p>
+<p style='text-align:center'><a href="#presentation">Présentation</a> — <a href="#catalogue">Catalogue</a> — <a href="#fidelite">Fidélité</a> — <a href="#fichier_source">Fichier source</a> — <a href="#bien_commun">Bien commun</a></p>
 
 <p style='text-align:center'><a href="feed.xml"><img src="feed-icon-14x14.png" alt="Fil RSS"/> Nouveautés et mises à jour</a></p>
 
@@ -26,11 +26,13 @@
 <ul>
   <li style="margin:1em 0 0 0"><em>réimpressions :</em> les textes proposés sont ceux d’éditions existantes. Lorsqu’il existe plusieurs éditions, c’est généralement la dernière édition corrigée par l’auteur qui est retenue. De plus, sauf circonstance exceptionnelle, je ne fais que des réimpressions d’éditions pour lesquelles un fac-similé est accessible librement, à tous.</li>
   <li style="margin:1em 0 0 0"><em>fidélité :</em> l’édition originale est reproduite aussi fidèlement que possible. Les corrections de coquilles sont indiquées explicitement. En général, l’orthographe et la typographie ne sont pas modernisées.</li>
-  <li style="margin:1em 0 0 0"><em>source et tirages :</em> les tirages (epub, kindle, etc.) sont réalisés à partir d’un fichier source.</li> 
-  <li style="margin:1em 0 0 0"><em>bien commun :</em> les textes font partie du bien commun, et je considère que les fichiers source font aussi partie du bien commun. Je souhaite la diffusion la plus large des tirages, mais seulement en dehors des circuits commerciaux.</li>
+  <li style="margin:1em 0 0 0"><em>source et epub :</em> les epub sont réalisés à partir d’un fichier source.</li> 
+  <li style="margin:1em 0 0 0"><em>bien commun :</em> les textes font partie du bien commun, et je considère que les fichiers source font aussi partie du bien commun. Je souhaite la diffusion la plus large des epub, mais seulement en dehors des circuits commerciaux.</li>
 </ul>
+
 <p>Vous trouverez plus de détails sur ces aspects ci-dessous.</p>
-<p>Tous vos commentaires (en particulier les  erreurs dans les textes) sont bienvenus. Merci de les envoyer à <a href="mailto:livres@efele.net">livres@efele.net</a>.</p>
+
+<p>Tous vos commentaires (en particulier les erreurs dans les textes) sont bienvenus. Merci de les envoyer à <a href="mailto:livres@efele.net">livres@efele.net</a>.</p>
 
 <h3><a name="catalogue">Catalogue</a></h3>
 
@@ -637,7 +639,7 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top'>Marx, Karl  et Engels, Frédéric</td>
+<td class='auteur' valign='top'>Marx, Karl et Engels, Frédéric</td>
 <td class='livre'><a href='livres/000104/index.html'>Manifeste du Parti Communiste</a></td>
 </tr>
 
@@ -669,7 +671,7 @@
 
 <tr>
 <td class='auteur' rowspan="2" valign="top">Moselly, Émile</td>
-<td class='livre'><a href='livres/000135/index.html'>Jean des  Brebis</a></td>
+<td class='livre'><a href='livres/000135/index.html'>Jean des Brebis</a></td>
 </tr>
 
 <tr>
@@ -1046,17 +1048,19 @@
 
 <h3><a name="fidelite">Fidélité</a></h3>
 
-<p>Il me semble important de respecter scrupuleusement  l’orthographe et la typographie originale. La principale raison est tout simplement le respect du texte original. De plus, je n’ai pas les compétences nécessaires pour produire une nouvelle édition crédible. Enfin, ce respect permet  d’avoir une évaluation objective du travail de réimpression, qui malgré des relectures reste toujours imparfait. D’où l’emploi du terme <em>réimpression</em> plutôt qu’<em>édition</em>, et l’utilisation de fac-similés précis et accessible à tous.</p>
+<p>Il me semble important de respecter scrupuleusement l’orthographe et la typographie originale. La principale raison est tout simplement le respect du texte original. De plus, je n’ai pas les compétences nécessaires pour produire une nouvelle édition crédible. Enfin, ce respect permet d’avoir une évaluation objective du travail de réimpression, qui malgré des relectures reste toujours imparfait. D’où l’emploi du terme <em>réimpression</em> plutôt qu’<em>édition</em>, et l’utilisation de fac-similés précis et accessible à tous.</p>
 
-<p>Cela dit, les éditions originales ont parfois des défauts. Cela va des   fautes d'impression (par exemple quand une lettre a sauté dans la   presse), aux fautes de composition (quand le typographe a pris la   mauvaise lettre), aux fautes d'orthographe de l'auteur, aux choix   idiosyncratiques des auteurs. Bien sûr, la limite entres toutes ces catégories n'est pas absolue, ou   du moins, il y beaucoup de cas où nous ne pouvons pas déterminer la   nature d’une erreur apparente (il faudrait demander à l'auteur). La ligne de conduite est la suivante : les fautes d’impression, quand elles peuvent être clairement identifiées en tant que telles, sont corrigées sans marquage ; les fautes de composition et d’orthographe, quand elles choquent à la lecture, sont corrigées avec marquage ; les orthographes d’époque ou idiosyncratiques ne sont pas corrigées ; la modernisation est proscrite (mais voir ci-dessous pour une exception).</p>
+<p>Cela dit, les éditions originales ont parfois des défauts. Cela va des fautes d'impression (par exemple quand une lettre a sauté dans la presse), aux fautes de composition (quand le typographe a pris la mauvaise lettre), aux fautes d'orthographe de l'auteur, aux choix idiosyncratiques des auteurs. Bien sûr, la limite entres toutes ces catégories n'est pas absolue, ou du moins, il y beaucoup de cas où nous ne pouvons pas déterminer la nature d’une erreur apparente (il faudrait demander à l'auteur). La ligne de conduite est la suivante : les fautes d’impression, quand elles peuvent être clairement identifiées en tant que telles, sont corrigées sans marquage ; les fautes de composition et d’orthographe, quand elles choquent à la lecture, sont corrigées avec marquage ; les orthographes d’époque ou idiosyncratiques ne sont pas corrigées ; la modernisation est proscrite (mais voir ci-dessous pour une exception).</p>
 
-<p>Ce respect n’empêche pas d’enrichir les fichiers source, tant que les enrichissements peuvent être distingués de ce qui est original.  Par exemple, dans Montesquieu, la graphie « oi » qui est devenue « ai » en français moderne est marquée par les éléments &lt;OA/&gt; et &lt;oa/&gt;. Les tirages ÉFÉLÉ réalisent ces élements par « AI » et « ai », sans marque particulière, parce que cela permet un lecture plus fluide ; libre à chacun de produire des tirages différents.</p>
+<p>Ce respect n’empêche pas d’enrichir les fichiers source, tant que les enrichissements peuvent être distingués de ce qui est original. Par exemple, dans Montesquieu, la graphie « oi » qui est devenue « ai » en français moderne est marquée par les éléments &lt;OA/&gt; et &lt;oa/&gt;. Les epubs ÉFÉLÉ réalisent ces élements par « AI » et « ai », sans marque particulière, parce que cela permet un lecture plus fluide ; libre à chacun de produire des epub différents.</p>
 
 <h3><a name="fichier_source">Fichier source</a></h3>
 
-<p>Les différent tirages sont effectués à partir du <em>fichier source</em>, qui est simplement la mise sous forme électronique de l’édition papier retenue. </p>
+<p>Les epub sont effectués à partir du <em>fichier source</em>, qui est simplement la mise sous forme électronique de l’édition papier retenue.</p>
 
-<p>Ce fichier source est en XML, dans un vocabulaire ad-hoc. La plupart des fichiers sources utilisent le vocabulaire BML (Book Markup Language), qui est en gros du HTML augmenté (meta-données, pagination de l’original, notes, séparateurs, poésie, corrections,...). Lorsque le texte a une structure relativement claire (par exemple, les <em>Lettres Persanes</em>, qui est fait de lettres, qui ont une entête, etc.), le vocabulaire est augmenté en conséquence, et la production de tirages passe par la transformation en BML.</p>
+<p>Ce fichier source est en XML, dans un vocabulaire ad-hoc. La plupart des fichiers sources utilisent le vocabulaire BML (Book Markup Language), qui est en gros du HTML augmenté (meta-données, pagination de l’original, notes, séparateurs, poésie, corrections,...). Lorsque le texte a une structure relativement claire (par exemple, les <em>Lettres Persanes</em>, qui est fait de lettres, qui ont une entête, etc.), le vocabulaire est augmenté en conséquence, et la production d'epub passe par la transformation en BML.</p>
+
+<p>Les fichiers sources sont maintenus sous <a href='https://github.com/eric-muller/livres-efele'>GitHub</a>.</p>
 
 <h3><a name="bien_commun">Bien commun</a></h3>
 
@@ -1064,11 +1068,11 @@
 
 <p>Bien que le travail de production du <em>fichier source</em> d’un texte soit important, j’estime qu’il n’y a pas d’acte créateur dans cette production, au moins avec la contrainte de fidélité imposée. Deux productions faites indépendamment ne seraient pas essentiellement différentes. Par conséquent, j’estime que ces <em>fichiers source</em> font aussi partie du bien commun.</p>
 
-<p>Je désire une diffusion gratuite (et aussi large que possible) des <em>tirages</em>, mais seulement en dehors des circuits commerciaux. Même s’il y a une forte motivation culturelle de la part d’un acteur commercial, et même s’il distribue les tirages gratuitement, il n’en reste pas moins que la motivation première de cet acteur est pécuniaire.</p>
+<p>Je désire une diffusion gratuite (et aussi large que possible) des epub, mais seulement en dehors des circuits commerciaux. Même s’il y a une forte motivation culturelle de la part d’un acteur commercial, et même s’il distribue les epub gratuitement, il n’en reste pas moins que la motivation première de cet acteur est pécuniaire.</p>
 
-<p>Tout un chacun, acteur  commercial ou pas, est libre d’utiliser les fichiers sources produits par ÉFÉLÉ (puisqu’ils nous appartiennent à tous) et de créer ses propre tirages, avec ou sans référence à ÉFÉLÉ.</p>
+<p>Tout un chacun, acteur commercial ou pas, est libre d’utiliser les fichiers sources produits par ÉFÉLÉ (puisqu’ils nous appartiennent à tous) et de créer ses propre epub, avec ou sans référence à ÉFÉLÉ.</p>
 
-<p>Parce que les fichier sources et les tirages sont améliorés au fur et à mesure que des erreurs sont trouvées, je recommande aux aggrégateurs de pointer sur http://efele.net/ebooks plutôt que de copier les fichiers.</p>
+<p>Parce que les fichier sources et les epub sont améliorés au fur et à mesure que des erreurs sont trouvées, je recommande aux aggrégateurs de pointer sur http://efele.net/ebooks plutôt que de copier les fichiers.</p>
 
 <p>Je ne collecte aucune donnée relative aux téléchargements, même en agrégat anonyme. Vos lectures et ce que vous voulez en partager ne regarde que vous. Je ne peux malheureusement pas garantir ce que mon fournisseur d’hébergement fait ou ne fait pas.</p>
 
