--- a/livres.publies/montesquieu/oeuvres_completes/index.html
+++ b/livres.publies/montesquieu/oeuvres_completes/index.html
@@ -9,7 +9,7 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:site" content="@LivresEfele"/>
 <meta name="twitter:title" content="Montesquieu : Œuvres complètes"/>
-<meta name="twitter:description" content="Édition Laboulaye. epub kindle daisy"/>
+<meta name="twitter:description" content="Édition Laboulaye. epub"/>
 <meta name="twitter:image" content="http://efele.net/ebooks/livres/c00002/thumbnail-tw.png"/>
 <meta name="twitter:url" content="."/>
 
@@ -28,11 +28,7 @@
 
 <p>Archive de tous les volumes :
     <a href="montesquieu_laboulaye_epub.zip">epub</a> 
-    <a href="montesquieu_laboulaye_mobi.zip">kindle</a>
-    <a href="montesquieu_laboulaye-daisy.zip.zip">daisy</a> 
 </p>
-
-<p><a href="montesquieu_laboulaye_sources.zip">Source XML</a></p></div>
 
 <table border="0" cellpadding="2">
   <tr style="vertical-align:top;">
