--- a/livres.publies/stendhal/romans_et_nouvelles/index.html
+++ b/livres.publies/stendhal/romans_et_nouvelles/index.html
@@ -9,7 +9,7 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:site" content="@LivresEfele"/>
 <meta name="twitter:title" content="Stendhal : Romans et nouvelles"/>
-<meta name="twitter:description" content="epub kindle daisy"/>
+<meta name="twitter:description" content="epub"/>
 <meta name="twitter:image" content="http://efele.net/ebooks/livres/c00006/thumbnail-tw.png"/>
 <meta name="twitter:url" content="."/>
 
@@ -30,11 +30,7 @@
 
 <p>Archive de tous les volumes :
     <a href="romans_et_nouvelles_epub.zip">epub</a> 
-    <a href="romans_et_nouvelles_mobi.zip">kindle</a>
-    <a href="romans_et_nouvelles_daisy.zip.zip">daisy</a> 
 </p>
-
-<p><a href="romans_et_nouvelles_sources.zip">Source XML</a></p></div>
 
 <table border="0" cellpadding="2">
   <tr style='vertical-align: top;'>
