000658  2022-06-24    Theuriet — Contes pour les soirs d’hiver

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -969,7 +969,11 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top'>Theuriet, André</td>
+<td class='auteur' valign='top' rowspan='2'>Theuriet, André</td>
+<td class='livre'><a href='livres/000658/index.html'>Contes pour les soirs d’hiver</a></td>
+</tr>
+<tr>
+<td class='auteur' valign='top' rowspan='2'>Theuriet, André</td>
 <td class='livre'><a href='livres/000432/index.html'>La fortune d’Angèle</a></td>
 </tr>
 
