--- a/livres.publies/regnier/oeuvres/index.html
+++ b/livres.publies/regnier/oeuvres/index.html
@@ -9,7 +9,7 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:site" content="@LivresEfele"/>
 <meta name="twitter:title" content="Henri de Régnier"/>
-<meta name="twitter:description" content="epub kindle daisy"/>
+<meta name="twitter:description" content="epub"/>
 <meta name="twitter:image" content="http://efele.net/ebooks/livres/c00015/thumbnail-tw.png"/>
 <meta name="twitter:url" content="."/>
 
@@ -30,11 +30,8 @@
 
 <p>Archive de tous les volumes :
     <a href="regnier_epub.zip">epub</a> 
-    <a href="regnier_mobi.zip">kindle</a>
-    <a href="reginer_daisy.zip.zip">daisy</a> 
 </p>
 
-<p><a href="regnier_sources.zip">Source XML</a></p>
 </div>
 
 <h2>Poésie</h2>
