--- a/livres.publies/chamfort/oeuvres_completes_auguis/index.html
+++ b/livres.publies/chamfort/oeuvres_completes_auguis/index.html
@@ -9,7 +9,7 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:site" content="@LivresEfele"/>
 <meta name="twitter:title" content="Sébastien-Roch-Nicolas de Chamfort : Œeuvres complètes de Chamfort"/>
-<meta name="twitter:description" content="Édition P. R. Auguis. epub kindle daisy"/>
+<meta name="twitter:description" content="Édition P. R. Auguis. epub"/>
 <meta name="twitter:image" content="http://efele.net/ebooks/livres/c00020/thumbnail-tw.png"/>
 <meta name="twitter:url" content="."/>
 
@@ -37,11 +37,7 @@
 
 <p>Archive de tous les volumes :
     <a href="chamfort_auguis_epub.zip">epub</a> 
-    <a href="chamfort_auguis_mobi.zip">kindle</a>
-    <a href="chamfort_auguis_daisy.zip.zip">daisy</a> 
 </p>
-
-<p><a href="chamfort_auguis_sources.zip">Source XML</a></p></div>
 
 <p><a href='../000450/index.html'>Avant-propos</a></p>
 <p><a href='../000445/index.html'>Notice historique sur la vie et les écrits de Chamfort</a></p>
