000659  2022-07-04    Toulet — La jeune fille verte

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -983,8 +983,11 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top' rowspan='3'>Toulet, Paul-Jean</td>
+<td class='auteur' valign='top' rowspan='4'>Toulet, Paul-Jean</td>
 <td class='livre'><a href='livres/000615/index.html'>Béhanzigue</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000659/index.html'>La jeune fille verte</a></td>
 </tr>
 <tr>
 <td class='livre'><a href='livres/000647/index.html'>Les demoiselles La Mortagne</a></td>
