--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -778,7 +778,7 @@
 </tr>
 
 <tr>
-<td class='auteur' rowspan='12' valign='top'>Prudhomme, Sully</td>
+<td class='auteur' rowspan='13' valign='top'>Prudhomme, Sully</td>
 <td class='livre'><a href='livres/000635/index.html'>Stances et poèmes</a></td>
 </tr>
 <tr>
@@ -813,6 +813,9 @@
 </tr>
 <tr>
 <td class='livre'><a href='livres/000653/index.html'>Le Zénith</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000660/index.html'>Lucrèce</a></td>
 </tr>
 
 <tr>
