000661  2022-08-14    Mac Orlan — La clique du café Brebis 000662  2020-08-14    Mac Orlan — L’île Torquate

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -580,36 +580,36 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top' rowspan='9'>Mac-Orlan, Pierre</td>
+<td class='auteur' valign='top' rowspan='11'>Mac-Orlan, Pierre</td>
 <td class='livre'><a href='livres/000525/index.html'>A bord de l’Étoile Matutine</a> *</td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000552/index.html'>La bête conquérante</a> *</td>
 </tr>
 <tr>
 <td class='livre'><a href='livres/000565/index.html'>La cavalière Elsa</a> *</td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000002/index.html'>Le chant de l’équipage</a> *</td>
 </tr>
 <tr>
 <td class='livre'><a href='livres/000523/index.html'>La chronique des temps désespérés</a> *</td>
 </tr>
-
+<tr>
+<td class='livre'><a href='livres/000661/index.html'>La clique du café Brebis</a> *</td>
+</tr>
 <tr>
 <td class='livre'><a href='livres/000565/index.html'>La fin</a> *</td>
 </tr>
-
+<tr>
+<td class='livre'><a href='livres/000662/index.html'>L’île Torquate</a> *</td>
+</tr>
 <tr>
 <td class='livre'><a href='livres/000617/index.html'>Les poissons morts</a> *</td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000518/index.html'>Petit manuel du parfait aventurier</a> *</td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000608/index.html'>U-713, ou les Gentilshommes d’infortune</a> *</td>
 </tr>
@@ -1052,7 +1052,7 @@
 
 </table>
 
-<p>* Cette œuvre a été publiée avant 1933 et est donc libre de droits aux États-Unis, où cette réimpression a été réalisée et où elle est hébergée. Elle n’est pas libre de droit dans certains pays comme la France.</p>
+<p>* Cette œuvre a été publiée avant 1927 et est donc libre de droits aux États-Unis, où cette réimpression a été réalisée et où elle est hébergée. Elle n’est pas libre de droit dans certains pays comme la France.</p>
 
 
 <h3><a name="fidelite">Fidélité</a></h3>
