000663  2022-08-16    Mac Orlan - La maison du retour écœurant

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -580,7 +580,7 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top' rowspan='11'>Mac-Orlan, Pierre</td>
+<td class='auteur' valign='top' rowspan='12'>Mac-Orlan, Pierre</td>
 <td class='livre'><a href='livres/000525/index.html'>A bord de l’Étoile Matutine</a> *</td>
 </tr>
 <tr>
@@ -603,6 +603,9 @@
 </tr>
 <tr>
 <td class='livre'><a href='livres/000662/index.html'>L’île Torquate</a> *</td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000663/index.html'>La maison du retour écœurant</a> *</td>
 </tr>
 <tr>
 <td class='livre'><a href='livres/000617/index.html'>Les poissons morts</a> *</td>
