Nettoyage des pages de collections.

--- a/livres.publies/barbara/histoires_emouvantes/index.html
+++ b/livres.publies/barbara/histoires_emouvantes/index.html
@@ -36,9 +36,9 @@
 <td><p style="font-size:1.2em; padding:0; margin:0;"><i>Charles Barbara</i></p><p style="font-size:1.5em; padding:1em 0 1em 0; margin:0;">Histoires émouvantes</p><p style="padding:0; margin:0;">Michel Lévy frères, Paris, 1857</p></td>
 </tr></table>
 
-<p>Archive de tous les volumes :
-    <a href="histoires_emouvantes_epub.zip">epub</a> 
-</p>
+<p>Archive de tous les <a href="histoires_emouvantes_epub.zip">epubs</a>.</p>
+
+</div>
 
 <table border="0" cellpadding="2">
 
