--- a/livres.publies/barbara/mes_petites_maisons/index.html
+++ b/livres.publies/barbara/mes_petites_maisons/index.html
@@ -36,10 +36,9 @@
 <td><p style="font-size:1.2em; padding:0; margin:0;"><i>Charles Barbara</i></p><p style="font-size:1.5em; padding:1em 0 1em 0; margin:0;">Mes petites-maisons</p><p style="padding:0; margin:0;">Hachette, Paris, 1860</p></td>
 </tr></table>
 
-<p>Archive de tous les volumes :
-    <a href="mes_petites_maisons_epub.zip">epub</a> 
-</p>
+<p>Archive de tous les <a href="mes_petites_maisons_epub.zip">epubs</a>.</p>
 
+</div>
 
 <table border="0" cellpadding="2">
 
