--- a/livres.publies/chamfort/oeuvres_completes_auguis/index.html
+++ b/livres.publies/chamfort/oeuvres_completes_auguis/index.html
@@ -35,9 +35,9 @@
 
 <p>Cette réimpression est en cours de réalisation.</p>
 
-<p>Archive de tous les volumes :
-    <a href="chamfort_auguis_epub.zip">epub</a> 
-</p>
+<p>Archive de tous les <a href="chamfort_auguis_epub.zip">epubs</a>.</p>
+
+</div>
 
 <p><a href='../000450/index.html'>Avant-propos</a></p>
 <p><a href='../000445/index.html'>Notice historique sur la vie et les écrits de Chamfort</a></p>
