--- a/livres.publies/loti/oeuvres_completes/index.html
+++ b/livres.publies/loti/oeuvres_completes/index.html
@@ -31,10 +31,9 @@
 
 <p>Cette réimpression n’inclut pas les pièces de théatre (dernier volume).</p>
  
+<p>Archive de tous les <a href="loti_calmann_levy_epub.zip">epubs</a>.</p>
 
-<p>Archive de tous les volumes :
-    <a href="loti_calmann_levy_epub.zip">epub</a> 
-</p>
+</div>
 
 <table border="0" cellpadding="2">
   <tr style="vertical-align:top;">
