--- a/livres.publies/rolland/l_ame_enchantee/index.html
+++ b/livres.publies/rolland/l_ame_enchantee/index.html
@@ -28,12 +28,9 @@
 <div style="margin:1em 0 0 1em;"><table><tr><td><img style="vertical-align:center; padding: 0 2em 0 2em; margin:0;" alt="couverture" src="thumbnail.png"></img></td><td><p style="font-size:1.2em; padding:0; margin:0;"><i>Romain Rolland</i></p><p style="font-size:1.5em; padding:1em 0 1em 0; margin:0;">L’âme enchantée</p><p style="padding:0; margin:0;">Ollendorff, Albin Michel, Paris, 1922-1933</p></td></tr></table>
 
 
-<p>Archive de tous les volumes :
-    <a href="l_ame_enchantee_epub.zip">EPUB</a> 
-    <a href="l_ame_enchantee_mobi.zip">kindle</a>
-    <a href="l_ame_enchantee_daisy.zip.zip">Daisy</a></p>
+<p>Archive de tous les <a href="l_ame_enchantee_epub.zip">epubs</a>.</p>
 
-<p><a href="l_ame_enchantee_sources.zip">Source XML</a></p></div>
+</div>
 
 <table border="0" cellpadding="2">
   <tr style="vertical-align:top;">
