--- a/livres.publies/samain/oeuvres/index.html
+++ b/livres.publies/samain/oeuvres/index.html
@@ -33,13 +33,9 @@
 <td><p style="font-size:1.2em; padding:0; margin:0;"><i>Albert Samain</i></p><p style="font-size:1.5em; padding:1em 0 1em 0; margin:0;">Œuvres de Albert Samain</p><p style="padding:0; margin:0;">Mercure de France, Paris, 1924</p></td>
 </tr></table>
 
-<p>Archive de tous les volumes :
-    <a href="samain_epub.zip">epub</a> 
-    <a href="samain_mobi.zip">kindle</a>
-    <a href="samain_daisy.zip.zip">daisy</a> 
-</p>
+<p>Archive de tous les <a href="samain_epub.zip">epubs</a>.</p> 
 
-<p><a href="samain_sources.zip">Source XML</a></p></div>
+</div>
 
 <p><a href='../000581/index.html'>Au jardin de l’infante</a></p>
 <p><a href='../000585/index.html'>Le chariot d’or</a></p>
