--- a/livres.publies/verlaine/oeuvres_completes/index.html
+++ b/livres.publies/verlaine/oeuvres_completes/index.html
@@ -32,9 +32,9 @@
 <td><p style="font-size:1.2em; padding:0; margin:0;"><i>Paul Verlaine</i></p><p style="font-size:1.5em; padding:1em 0 1em 0; margin:0;">Œuvres complètes</p><p style="padding:0; margin:0;">Léon Vanier, Paris, 1902-1905</p></td>
 </tr></table>
 
-<p>Archive de tous les volumes :
-    <a href="verlaine_leon_vanier_epub.zip">epub</a> 
-</p>
+<p>Archive de tous les <a href="verlaine_leon_vanier_epub.zip">epubs</a>.</p>
+
+</div>
 
 <table border="0" cellpadding="2">
 
@@ -172,8 +172,6 @@
 
   <tr><td colspan='4'><hr/></td></tr>
 </table>
-
-
 
 </body>
 </html>
