--- a/livres.publies/balzac/la_comedie_humaine/index.html
+++ b/livres.publies/balzac/la_comedie_humaine/index.html
@@ -33,13 +33,9 @@
 <td><p style="font-size:1.2em; padding:0; margin:0;"><i>Honoré de Balzac</i></p><p style="font-size:1.5em; padding:1em 0 1em 0; margin:0;">La comédie humaine</p><p style="padding:0; margin:0;">Furne, J.-J. Dubochet et Cie, J. Hetzel et Paulin, Paris, 1842-1848</p></td>
 </tr></table>
 
-<p>Archive de tous les volumes :
-    <a href="la_comedie_humaine_epub.zip">epub</a> 
-</p>
+<p>Archive de tous les <a href="la_comedie_humaine_epub.zip">epubs</a>.</p>
 
-<p><a href="la_comedie_humaine_sources.zip">Source XML</a></p></div>
-
-
+</div>
 
 <table border="0" cellpadding="2">
 
