--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -37,14 +37,9 @@
 <td><p style="font-size:1.2em; padding:0; margin:0;"><i>François Coppée</i></p><p style="font-size:1.5em; padding:1em 0 1em 0; margin:0;">Œuvres complètes</p><p style="padding:0; margin:0;">Lemerre, Paris, 1885-1909</p></td>
 </tr></table>
 
-<p>Archive de tous les volumes :
-    <a href="coppee_oeuvres_completes_lemerre_epub.zip">epub</a> 
-    <a href="coppee_oeuvres_completes_lemerre_mobi.zip">kindle</a>
-    <a href="coppee_oeuvres_completes_lemerre_daisy.zip.zip">daisy</a> 
-</p>
+<p>Archive de tous les <a href="coppee_oeuvres_completes_lemerre_epub.zip">epubs</a>.</p>
 
-<p><a href="coppee_oeuvres_completes_lemerre_sources.zip">Source XML</a></p></div>
-
+</div>
 
 <h3>Poésie</h3>
 
