--- a/livres.publies/hugo/hetzel_romans/index.html
+++ b/livres.publies/hugo/hetzel_romans/index.html
@@ -27,10 +27,9 @@
 
 <div style="margin:1em 0 0 1em;"><table><tr><td><img style="vertical-align:center; padding: 0 2em 0 2em; margin:0;" alt="couverture" src="thumbnail.png"></img></td><td><p style="font-size:1.2em; padding:0; margin:0;"><i>Victor Hugo</i></p><p style="font-size:1.5em; padding:1em 0 1em 0; margin:0;">Œuvres complètes, Romans</p><p style="padding:0; margin:0;">Hetzel Quantin, Paris, 1880-1926</p></td></tr></table>
 
+<p>Archive de tous les <a href="hugo_romans_hetzel_epub.zip">epubs</a>.</p>
 
-<p>Archive de tous les volumes :
-    <a href="hugo_romans_hetzel_epub.zip">epub</a> 
-</p>
+</div>
 
 <table border="0" cellpadding="2">
   <tr style="vertical-align:top;">
