--- a/livres.publies/maupassant/conard/index.html
+++ b/livres.publies/maupassant/conard/index.html
@@ -27,14 +27,9 @@
 
 <div style="margin:1em 0 0 1em;"><table><tr><td><img style="vertical-align:center; padding: 0 2em 0 2em; margin:0;" alt="couverture" src="thumbnail.png"></img></td><td><p style="font-size:1.2em; padding:0; margin:0;"><i>Guy de Maupassant</i></p><p style="font-size:1.5em; padding:1em 0 1em 0; margin:0;">Œuvres complètes</p><p style="padding:0; margin:0;">Louis Conard, Paris, 1908-1910</p></td></tr></table>
 
+<p>Archive de tous les <a href="maupassant_conard_epub.zip">epubs</a>.</p> 
 
-<p>Archive de tous les volumes :
-    <a href="maupassant_conard_epub.zip">epub</a> 
-    <a href="maupassant_conard_mobi.zip">kindle</a>
-    <a href="maupassant_conard_daisy.zip.zip">daisy</a> 
-</p>
-
-<p><a href="maupassant_conard_sources.zip">Source XML</a></p></div>
+</div>
 
 <table border="0" cellpadding="2">
   <tr style="vertical-align:top;">
