--- a/livres.publies/montesquieu/oeuvres_completes/index.html
+++ b/livres.publies/montesquieu/oeuvres_completes/index.html
@@ -26,9 +26,9 @@
 
 <div style="margin:1em 0 0 1em;"><table><tr><td><img style="vertical-align:center; padding: 0 2em 0 2em; margin:0;" alt="couverture" src="thumbnail.png"></img></td><td><p style="font-size:1.2em; padding:0; margin:0;"><i>Montesquieu</i></p><p style="font-size:1.5em; padding:1em 0 1em 0; margin:0;">Œuvres complètes</p><p style="padding:0; margin:0;">Édition : Édouard Laboulaye</p><p style="padding:0; margin:0;">Garnier Frères, Paris, 1875-1879</p></td></tr></table>
 
-<p>Archive de tous les volumes :
-    <a href="montesquieu_laboulaye_epub.zip">epub</a> 
-</p>
+<p>Archive de tous les <a href="montesquieu_laboulaye_epub.zip">epubs</a>.</p>
+
+</div>
 
 <table border="0" cellpadding="2">
   <tr style="vertical-align:top;">
