--- a/livres.publies/regnier/oeuvres/index.html
+++ b/livres.publies/regnier/oeuvres/index.html
@@ -28,9 +28,7 @@
 <div style="margin:1em 0 0 1em;"><table><tr><td><img style="vertical-align:center; padding: 0 2em 0 2em; margin:0; " alt="Henri de Régnier" src="thumbnail.png"></img></td><td><p style="font-size:1.2em; padding:0; margin:0;"><i>Henri de Régnier</i></p><p style="font-size:1.5em; padding:1em 0 1em 0; margin:0;">Œuvres</p></td></tr></table>
 
 
-<p>Archive de tous les volumes :
-    <a href="regnier_epub.zip">epub</a> 
-</p>
+<p>Archive de tous les <a href="regnier_epub.zip">epubs</a>.</p>
 
 </div>
 
