--- a/livres.publies/stendhal/romans_et_nouvelles/index.html
+++ b/livres.publies/stendhal/romans_et_nouvelles/index.html
@@ -27,10 +27,9 @@
 
 <div style="margin:1em 0 0 1em;"><table><tr><td><img style="vertical-align:center; padding: 0 2em 0 2em; margin:0;" alt="couverture" src="thumbnail.png"></img></td><td><p style="font-size:1.2em; padding:0; margin:0;"><i>Stendhal</i></p><p style="font-size:1.5em; padding:1em 0 1em 0; margin:0;">Romans et nouvelles</p><p style="padding:0; margin:0;">Édition : Henri Martineau</p><p style="padding:0; margin:0;">Le Divan, Paris, 1927</p></td></tr></table>
 
+<p>Archive de tous les <a href="romans_et_nouvelles_epub.zip">epubs</a>.</p>
 
-<p>Archive de tous les volumes :
-    <a href="romans_et_nouvelles_epub.zip">epub</a> 
-</p>
+</div>
 
 <table border="0" cellpadding="2">
   <tr style='vertical-align: top;'>
