--- a/livres.publies/verlaine/oeuvres_posthumes/index.html
+++ b/livres.publies/verlaine/oeuvres_posthumes/index.html
@@ -36,11 +36,9 @@
 <td><p style="font-size:1.2em; padding:0; margin:0;"><i>Paul Verlaine</i></p><p style="font-size:1.5em; padding:1em 0 1em 0; margin:0;">Œuvres posthumes</p><p style="padding:0; margin:0;">Albert Messein, Paris, 1926-1927</p></td>
 </tr></table>
 
+<p>Archive de tous les <a href="verlaine_albert_messein_epub.zip">epubs</a>.</p>
 
-<p>Archive de tous les volumes :
-    <a href="verlaine_albert_messein_epub.zip">epub</a> 
-</p>
-
+</div>
 
 <table border="0" cellpadding="2">
 
