--- a/livres.publies/zola/les_rougon_macquart/index.html
+++ b/livres.publies/zola/les_rougon_macquart/index.html
@@ -32,15 +32,9 @@
 <td><p style="font-size:1.2em; padding:0; margin:0;"><i>Émile Zola</i></p><p style="font-size:1.5em; padding:1em 0 1em 0; margin:0;">Les Rougon-Macquart</p><p style="padding:0; margin:0;">G. Charpentier, Paris</p></td>
 </tr></table>
 
-<p>Archive de tous les volumes :
-    <a href="les_rougon_macquart_epub.zip">epub</a> 
-    <a href="les_rougon_macquart_mobi.zip">kindle</a>
-    <a href="les_rougon_macquart_daisy.zip.zip">daisy</a> 
-</p>
+<p>Archive de tous les <a href="les_rougon_macquart_epub.zip">epubs</a>.</p>
 
-<p><a href="les_rougon_macquart_sources.zip">Source XML</a></p></div>
-
-
+</div>
 
 <table border="0" cellpadding="2">
   <tr style="vertical-align:top;">
