Molière — Amphitryon : vers sur plusieur lignes

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -26,8 +26,8 @@
 <ul>
   <li style="margin:1em 0 0 0"><em>réimpressions :</em> les textes proposés sont ceux d’éditions existantes. Lorsqu’il existe plusieurs éditions, c’est généralement la dernière édition corrigée par l’auteur qui est retenue. De plus, sauf circonstance exceptionnelle, je ne fais que des réimpressions d’éditions pour lesquelles un fac-similé est accessible librement, à tous.</li>
   <li style="margin:1em 0 0 0"><em>fidélité :</em> l’édition originale est reproduite aussi fidèlement que possible. Les corrections de coquilles sont indiquées explicitement. En général, l’orthographe et la typographie ne sont pas modernisées.</li>
-  <li style="margin:1em 0 0 0"><em>source et epub :</em> les epub sont réalisés à partir d’un fichier source.</li> 
-  <li style="margin:1em 0 0 0"><em>bien commun :</em> les textes font partie du bien commun, et je considère que les fichiers source font aussi partie du bien commun. Je souhaite la diffusion la plus large des epub, mais seulement en dehors des circuits commerciaux.</li>
+  <li style="margin:1em 0 0 0"><em>source et epub :</em> les epubs sont réalisés à partir d’un fichier source.</li> 
+  <li style="margin:1em 0 0 0"><em>bien commun :</em> les textes font partie du bien commun, et je considère que les fichiers source font aussi partie du bien commun. Je souhaite la diffusion la plus large des epubs, mais seulement en dehors des circuits commerciaux.</li>
 </ul>
 
 <p>Vous trouverez plus de détails sur ces aspects ci-dessous.</p>
@@ -1064,11 +1064,11 @@
 
 <p>Cela dit, les éditions originales ont parfois des défauts. Cela va des fautes d'impression (par exemple quand une lettre a sauté dans la presse), aux fautes de composition (quand le typographe a pris la mauvaise lettre), aux fautes d'orthographe de l'auteur, aux choix idiosyncratiques des auteurs. Bien sûr, la limite entres toutes ces catégories n'est pas absolue, ou du moins, il y beaucoup de cas où nous ne pouvons pas déterminer la nature d’une erreur apparente (il faudrait demander à l'auteur). La ligne de conduite est la suivante : les fautes d’impression, quand elles peuvent être clairement identifiées en tant que telles, sont corrigées sans marquage ; les fautes de composition et d’orthographe, quand elles choquent à la lecture, sont corrigées avec marquage ; les orthographes d’époque ou idiosyncratiques ne sont pas corrigées ; la modernisation est proscrite (mais voir ci-dessous pour une exception).</p>
 
-<p>Ce respect n’empêche pas d’enrichir les fichiers source, tant que les enrichissements peuvent être distingués de ce qui est original. Par exemple, dans Montesquieu, la graphie « oi » qui est devenue « ai » en français moderne est marquée par les éléments &lt;OA/&gt; et &lt;oa/&gt;. Les epubs ÉFÉLÉ réalisent ces élements par « AI » et « ai », sans marque particulière, parce que cela permet un lecture plus fluide ; libre à chacun de produire des epub différents.</p>
+<p>Ce respect n’empêche pas d’enrichir les fichiers source, tant que les enrichissements peuvent être distingués de ce qui est original. Par exemple, dans Montesquieu, la graphie « oi » qui est devenue « ai » en français moderne est marquée par les éléments &lt;OA/&gt; et &lt;oa/&gt;. Les epubs ÉFÉLÉ réalisent ces élements par « AI » et « ai », sans marque particulière, parce que cela permet un lecture plus fluide ; libre à chacun de produire des epubs différents.</p>
 
 <h3><a name="fichier_source">Fichier source</a></h3>
 
-<p>Les epub sont effectués à partir du <em>fichier source</em>, qui est simplement la mise sous forme électronique de l’édition papier retenue.</p>
+<p>Les epubs sont effectués à partir du <em>fichier source</em>, qui est simplement la mise sous forme électronique de l’édition papier retenue.</p>
 
 <p>Ce fichier source est en XML, dans un vocabulaire ad-hoc. La plupart des fichiers sources utilisent le vocabulaire BML (Book Markup Language), qui est en gros du HTML augmenté (meta-données, pagination de l’original, notes, séparateurs, poésie, corrections,...). Lorsque le texte a une structure relativement claire (par exemple, les <em>Lettres Persanes</em>, qui est fait de lettres, qui ont une entête, etc.), le vocabulaire est augmenté en conséquence, et la production d'epub passe par la transformation en BML.</p>
 
@@ -1080,11 +1080,11 @@
 
 <p>Bien que le travail de production du <em>fichier source</em> d’un texte soit important, j’estime qu’il n’y a pas d’acte créateur dans cette production, au moins avec la contrainte de fidélité imposée. Deux productions faites indépendamment ne seraient pas essentiellement différentes. Par conséquent, j’estime que ces <em>fichiers source</em> font aussi partie du bien commun.</p>
 
-<p>Je désire une diffusion gratuite (et aussi large que possible) des epub, mais seulement en dehors des circuits commerciaux. Même s’il y a une forte motivation culturelle de la part d’un acteur commercial, et même s’il distribue les epub gratuitement, il n’en reste pas moins que la motivation première de cet acteur est pécuniaire.</p>
+<p>Je désire une diffusion gratuite (et aussi large que possible) des epubs, mais seulement en dehors des circuits commerciaux. Même s’il y a une forte motivation culturelle de la part d’un acteur commercial, et même s’il distribue les epubs gratuitement, il n’en reste pas moins que la motivation première de cet acteur est pécuniaire.</p>
 
-<p>Tout un chacun, acteur commercial ou pas, est libre d’utiliser les fichiers sources produits par ÉFÉLÉ (puisqu’ils nous appartiennent à tous) et de créer ses propre epub, avec ou sans référence à ÉFÉLÉ.</p>
+<p>Tout un chacun, acteur commercial ou pas, est libre d’utiliser les fichiers sources produits par ÉFÉLÉ (puisqu’ils nous appartiennent à tous) et de créer ses propre epubs, avec ou sans référence à ÉFÉLÉ.</p>
 
-<p>Parce que les fichier sources et les epub sont améliorés au fur et à mesure que des erreurs sont trouvées, je recommande aux aggrégateurs de pointer sur http://efele.net/ebooks plutôt que de copier les fichiers.</p>
+<p>Parce que les fichiers source et les epubs sont améliorés au fur et à mesure que des erreurs sont trouvées, je recommande aux aggrégateurs de pointer sur http://efele.net/ebooks plutôt que de copier les fichiers.</p>
 
 <p>Je ne collecte aucune donnée relative aux téléchargements, même en agrégat anonyme. Vos lectures et ce que vous voulez en partager ne regarde que vous. Je ne peux malheureusement pas garantir ce que mon fournisseur d’hébergement fait ou ne fait pas.</p>
 
