000664  2022-08-18    Prudhome — La justice

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -781,7 +781,7 @@
 </tr>
 
 <tr>
-<td class='auteur' rowspan='13' valign='top'>Prudhomme, Sully</td>
+<td class='auteur' rowspan='14' valign='top'>Prudhomme, Sully</td>
 <td class='livre'><a href='livres/000635/index.html'>Stances et poèmes</a></td>
 </tr>
 <tr>
@@ -819,6 +819,9 @@
 </tr>
 <tr>
 <td class='livre'><a href='livres/000660/index.html'>Lucrèce</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000664/index.html'>La justice</a></td>
 </tr>
 
 <tr>
