--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -780,49 +780,6 @@
 <td class='livre'><a href='livres/000403/index.html'>Le poème de la tranchée</a></td>
 </tr>
 
-<tr>
-<td class='auteur' rowspan='14' valign='top'>Prudhomme, Sully</td>
-<td class='livre'><a href='livres/000635/index.html'>Stances et poèmes</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000638/index.html'>Les épreuves</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000639/index.html'>Les écuries d’Augias</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000640/index.html'>Croquis italiens</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000643/index.html'>Les solitudes</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000644/index.html'>Impressions de la guerre</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000648/index.html'>Les vaines tendresses</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000649/index.html'>La France</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000650/index.html'>La révolte des fleurs</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000651/index.html'>Poésies diverses</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000652/index.html'>Les destins</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000653/index.html'>Le Zénith</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000660/index.html'>Lucrèce</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000664/index.html'>La justice</a></td>
-</tr>
 
 <tr>
 <td class='auteur' valign='top'>Rameau, Jean</td>
@@ -961,6 +918,50 @@
 <tr>
 <td class='auteur' valign='top'>Stirner, Max</td>
 <td class='livre'><a href='livres/000405/index.html'>L’unique et sa propriété</a></td>
+</tr>
+
+<tr>
+<td class='auteur' rowspan='14' valign='top'>Sully Prudhomme</td>
+<td class='livre'><a href='livres/000635/index.html'>Stances et poèmes</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000638/index.html'>Les épreuves</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000639/index.html'>Les écuries d’Augias</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000640/index.html'>Croquis italiens</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000643/index.html'>Les solitudes</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000644/index.html'>Impressions de la guerre</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000648/index.html'>Les vaines tendresses</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000649/index.html'>La France</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000650/index.html'>La révolte des fleurs</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000651/index.html'>Poésies diverses</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000652/index.html'>Les destins</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000653/index.html'>Le Zénith</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000660/index.html'>Lucrèce</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000664/index.html'>La justice</a></td>
 </tr>
 
 <tr>
