000665  2022-08-20    Prudhomme — Le prisme

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -921,7 +921,7 @@
 </tr>
 
 <tr>
-<td class='auteur' rowspan='14' valign='top'>Sully Prudhomme</td>
+<td class='auteur' rowspan='15' valign='top'>Sully Prudhomme</td>
 <td class='livre'><a href='livres/000635/index.html'>Stances et poèmes</a></td>
 </tr>
 <tr>
@@ -962,6 +962,9 @@
 </tr>
 <tr>
 <td class='livre'><a href='livres/000664/index.html'>La justice</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000665/index.html'>Le prisme</a></td>
 </tr>
 
 <tr>
