--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -921,50 +921,8 @@
 </tr>
 
 <tr>
-<td class='auteur' rowspan='15' valign='top'>Sully Prudhomme</td>
-<td class='livre'><a href='livres/000635/index.html'>Stances et poèmes</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000638/index.html'>Les épreuves</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000639/index.html'>Les écuries d’Augias</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000640/index.html'>Croquis italiens</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000643/index.html'>Les solitudes</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000644/index.html'>Impressions de la guerre</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000648/index.html'>Les vaines tendresses</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000649/index.html'>La France</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000650/index.html'>La révolte des fleurs</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000651/index.html'>Poésies diverses</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000652/index.html'>Les destins</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000653/index.html'>Le Zénith</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000660/index.html'>Lucrèce</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000664/index.html'>La justice</a></td>
-</tr>
-<tr>
-<td class='livre'><a href='livres/000665/index.html'>Le prisme</a></td>
+<td class='auteur' rowspan='1' valign='top'>Sully Prudhomme</td>
+<td class='livre'><a href='livres/c00021/index.html'>Poésies de Sully Prudhomme</a></td>
 </tr>
 
 <tr>
