000667  2022-08-01    Mac Orlan — Aux lumières de Paris

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -580,8 +580,11 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top' rowspan='12'>Mac-Orlan, Pierre</td>
+<td class='auteur' valign='top' rowspan='13'>Mac Orlan, Pierre</td>
 <td class='livre'><a href='livres/000525/index.html'>A bord de l’Étoile Matutine</a> *</td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000667/index.html'>Aux lumières de Paris</a> *</td>
 </tr>
 <tr>
 <td class='livre'><a href='livres/000552/index.html'>La bête conquérante</a> *</td>
