000668  2022-09-05    Mac Orlan — La Vénus internationale

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -580,7 +580,7 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top' rowspan='13'>Mac Orlan, Pierre</td>
+<td class='auteur' valign='top' rowspan='14'>Mac Orlan, Pierre</td>
 <td class='livre'><a href='livres/000525/index.html'>A bord de l’Étoile Matutine</a> *</td>
 </tr>
 <tr>
@@ -618,6 +618,9 @@
 </tr>
 <tr>
 <td class='livre'><a href='livres/000608/index.html'>U-713, ou les Gentilshommes d’infortune</a> *</td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000668/index.html'>La Vénus internationale</a> *</td>
 </tr>
 
 
