--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -410,8 +410,14 @@
 </tr>
 
 <tr>
-<td class='auteur' valign="top" rowspan="2">Gide, André</td>
+<td class='auteur' valign="top" rowspan="4">Gide, André</td>
 <td class='livre'><a href='livres/000642/index.html'>Isabelle</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000670/index.html'>Retour de l’U.R.S.S.</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000671/index.html'>Retouches à mon Retour de l’U.R.S.S.</a></td>
 </tr>
 <tr>
 <td class='livre'><a href='livres/000645/index.html'>Souvenirs de la Cour d’assises</a></td>
