000672  2023-08-17    Huysmans — Un dilemne

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -465,7 +465,7 @@
 </tr>
 
 <tr>
-<td class='auteur' valign="top" rowspan="4">Huysmans, Joris-Karl </td>
+<td class='auteur' valign="top" rowspan="5">Huysmans, Joris-Karl </td>
 <td class='livre'><a href='livres/000383/index.html'>A vau-l’eau</a></td>
 </tr>
 
@@ -479,6 +479,10 @@
 
 <tr>
 <td class='livre'><a href='livres/000395/index.html'>Marthe</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000672/index.html'>Un dilemne</a></td>
 </tr>
 
 <tr>
