--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -410,6 +410,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign="top">François</td>
+<td class='livre'><a href='livres/000673/index.html'>Laudato si’</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign="top" rowspan="4">Gide, André</td>
 <td class='livre'><a href='livres/000642/index.html'>Isabelle</a></td>
 </tr>
