000674  2023-12-02    Tharaud — Dingley : l’illuste écrivain

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -966,6 +966,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top' rowspan='1'>Tharaud, Jérôme et Jean</td>
+<td class='livre'><a href='livres/000673/index.html'>Dingley : l’illustre écrivain</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign='top' rowspan='2'>Theuriet, André</td>
 <td class='livre'><a href='livres/000658/index.html'>Contes pour les soirs d’hiver</a></td>
 </tr>
