000675  2023-12-09    Holbach — Théologie portative

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -457,6 +457,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Holbach, , baron d’</td>
+<td class='livre'><a href='livres/000675/index.html'>Théologie portative</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign="top" rowspan='3'>Hugo, Victor</td>
 <td class='livre'><a href='livres/c00013/index.html'>Choses vues, édition Ollendorf/Imprimerie nationale</a></td>
 </tr>
