000676  2023-12-12    Farrère — Les civilisés

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -386,6 +386,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign="top">Farrère, Claude</td>
+<td class='livre'><a href='livres/000676/index.html'>Les civilisés</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign='top'>Faure, Sébastien</td>
 <td class='livre'><a href='livres/000376/index.html'>L’orateur populaire</a></td>
 </tr>
