000677  2023-12-13    François — Laudate Deum

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -415,8 +415,11 @@
 </tr>
 
 <tr>
-<td class='auteur' valign="top">François</td>
+<td class='auteur' valign="top" rowspan="2">François</td>
 <td class='livre'><a href='livres/000673/index.html'>Laudato si’</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000677/index.html'>Laudate Deum</a></td>
 </tr>
 
 <tr>
