000678  2023-12-29    Frapié — La maternelle

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -423,6 +423,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign="top" rowspan="1">Frapié, Léon</td>
+<td class='livre'><a href='livres/000678/index.html'>La maternelle</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign="top" rowspan="4">Gide, André</td>
 <td class='livre'><a href='livres/000642/index.html'>Isabelle</a></td>
 </tr>
