000679  2023-12-31    Mac Orlan — Sous la lumière froide

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -618,7 +618,7 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top' rowspan='14'>Mac Orlan, Pierre</td>
+<td class='auteur' valign='top' rowspan='15'>Mac Orlan, Pierre</td>
 <td class='livre'><a href='livres/000525/index.html'>A bord de l’Étoile Matutine</a> *</td>
 </tr>
 <tr>
@@ -653,6 +653,9 @@
 </tr>
 <tr>
 <td class='livre'><a href='livres/000518/index.html'>Petit manuel du parfait aventurier</a> *</td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000679/index.html'>Sous la lumière froide</a> *</td>
 </tr>
 <tr>
 <td class='livre'><a href='livres/000608/index.html'>U-713, ou les Gentilshommes d’infortune</a> *</td>
