000680  2024-01-08    Miomandre — Écrit sur de l’eau

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -710,6 +710,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Miomandre, Francis de</td>
+<td class='livre'><a href='livres/000680/index.html'>Écrit sur de l’eau</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign='top'>Molière</td>
 <td class='livre'><a href="livres/c00016/index.html">Œuvres complètes, édition Félix Lemaistre</a></td>
 </tr>
