000681  2024-01-10    Châteaubriant — Monsieur des Lourdines

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -277,6 +277,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Châteaubriant, Alphonse de</td>
+<td class='livre'><a href='livres/000681/index.html'>Monsieur des Lourdines</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign='top'>Chenu, Charles</td>
 <td class='livre'><a href='livres/000381/index.html'>De l’arrière à l’avant</a></td>
 </tr>
