000682  2024-02-10    Bookchin — Our synthetic environment

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -243,6 +243,11 @@
 </tr>
 
 <tr>
+<td class='auteur' rowspan="1" valign="top">Bookchin, Murray</td>
+<td class='livre'><a href='livres/000682/index.html'>Our Synthetic Environment</a></td>
+</tr>
+
+<tr>
 <td class='auteur' rowspan="2" valign="top">Bourgeois, Léon</td>
 <td class='livre'><a href='livres/000372/index.html'>Les applications de la solidarité sociale</a></td>
 </tr>
@@ -1103,7 +1108,7 @@
 
 <h3><a name="bien_commun">Bien commun</a></h3>
 
-<p>Les textes réimprimés appartiennent au domaine public, et font partie de notre bien commun. Nous avons le bonheur de disposer de technologies qui permettent de diffuser ce bien commun à un coût essentiellement nul. Je pense que nous devons saisir cette occasion pour nous réapproprier notre bien commun, et nous dispenser des circuits commerciaux.</p>
+<p>Les textes réimprimés font partie de notre bien commun. Nous avons le bonheur de disposer de technologies qui permettent de diffuser ce bien commun à un coût essentiellement nul. Je pense que nous devons saisir cette occasion pour nous réapproprier notre bien commun, et nous dispenser des circuits commerciaux.</p>
 
 <p>Bien que le travail de production du <em>fichier source</em> d’un texte soit important, j’estime qu’il n’y a pas d’acte créateur dans cette production, au moins avec la contrainte de fidélité imposée. Deux productions faites indépendamment ne seraient pas essentiellement différentes. Par conséquent, j’estime que ces <em>fichiers source</em> font aussi partie du bien commun.</p>
 
