000683  2024-02-14    Borlaug — Mankind and Civilization at Another Crossroad

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -248,6 +248,11 @@
 </tr>
 
 <tr>
+<td class='auteur' rowspan="1" valign="top">Borlaug, Norman</td>
+<td class='livre'><a href='livres/000683/index.html'>Mankind and Civilization at Another Crossroad</a></td>
+</tr>
+
+<tr>
 <td class='auteur' rowspan="2" valign="top">Bourgeois, Léon</td>
 <td class='livre'><a href='livres/000372/index.html'>Les applications de la solidarité sociale</a></td>
 </tr>
